--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="container-fluid">
   <div class="row content">
     <div class="col-sm-3 sidenav">
-      <h4>São Paulo </h4>
+      <h4>Corinthians</h4>
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="#section1">Título</a></li>
         <li><a href="#section2">Jogadores</a></li>
